--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ nav i {
   font-size: 2.3rem;
   margin-right: 30px;
   display: none;
+  z-index: -1;
 }
 .nav-logo {
   width: 12vw;
@@ -533,7 +534,7 @@ footer {
   }
   .nav-menu .hire {
     position: relative;
-    top: 120px;
+    top: 170px;
     left: -6px;
   }
   header {
@@ -541,7 +542,7 @@ footer {
   }
   header .intro-conteiner {
     width: 100%;
-    height: 60vh;
+    height: 70vh;
   }
   .intro-conteiner .text {
     width: 80%;
