--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,7 @@ footer {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 150vw;
+    height: 100vh;
     background-color: #2fa5d6;
     position: absolute;
     left: 0px;
@@ -546,7 +546,8 @@ footer {
   }
   .intro-conteiner .text {
     width: 80%;
-    height: 60vw;
+    height: 40vh;
+    margin-top: 100px;
   }
   .intro-conteiner .text h1 {
     margin-top: 15px;
