--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 70px;
+
   /* border-bottom: 1px solid #f2ebeb; */
 }
 nav i {
@@ -54,6 +55,8 @@ nav i {
   background-color: green; */
   height: 3vw;
   margin-right: 100px;
+  position: relative;
+  left: 200px;
 }
 
 .nav-menu > ul {
@@ -394,6 +397,7 @@ header .img-conteiner {
 .project #p-1:hover {
   background-color: white;
   color: black;
+  box-shadow: 2px 3px 5px black;
 }
 /* project area end */
 /* contuct area start */
