--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ header .intro-conteiner {
   font-size: 2.5rem;
   margin-top: 70px;
 }
+.intro-conteiner .text h1 span {
+  color: #7091f5;
+}
 .intro-conteiner .text p {
   margin: 20px 0;
   line-height: 25px;
@@ -136,15 +139,16 @@ header .intro-conteiner {
   background-color: transparent;
 }
 
-span {
+.typing-text span {
   position: relative;
   left: 5px;
   padding: 5px;
 }
 
-span::before {
+.typing-text span::before {
   content: '';
-  color: orangered;
+  color: #793fdf;
+  font-weight: bold;
   animation: text 20s infinite;
 }
 @keyframes text {
@@ -170,7 +174,7 @@ span::before {
   }
 }
 
-span::after {
+.typing-text span::after {
   content: '';
   position: absolute;
   width: calc(100% + 10px);
